--- a/public/css/test.css
+++ b/public/css/test.css
@@ -7,6 +7,7 @@ font-family:courier,arial,helvetica;
 table {
 	border-collapse: collapse;
 	width: 100%;
+	font-size: 10px;
 }
 
 tr:nth-child(even) {background-color: #f2f2f2;}
@@ -49,6 +50,7 @@ body{ background-color: grey !important;}
 table {
 	border-collapse: collapse;
 	width: 100%;
+	font-size: 10px;
 }
 
 tr:nth-child(even) {background-color: #f2f2f2;}
