--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,8 @@
 </div>
 
 <div class="slotter" id="slotter" style="">
-<h4>Enter Course Number and Link</h4>
+<h4>Enter Course Number and Link</h4><br>
+<h4>(ex. Name: OK1100, Link: meet.joojle.something)</h4>
 <div><input id="namea" placeholder="Name A Slot"><input id="a" placeholder="Class Link"><button onClick="changer(a)">Insert</button></div>
 <div><input id="nameb" placeholder="Name B Slot"><input id="b" placeholder="Class Link"><button onClick="changer(b)">Insert</button></div>
 <div><input id="namec" placeholder="Name C Slot"><input id="c" placeholder="Class Link"><button onClick="changer(c)">Insert</button></div>
@@ -42,7 +43,7 @@
 </center>
 
 
-
+	<center>
 	<!-- TABLE -->
 	<div class="tablee" style="overflow-x:auto;">
 		<table>
@@ -125,6 +126,7 @@
 			</tr>
 			<!-- SAT -->
 		</table>
+		</center>
 		<center><button id="convert-button" style="background-color: #4CAF50; /* Green */
   border: none;
   color: white;
