--- a/public/css/test.css
+++ b/public/css/test.css
@@ -49,7 +49,7 @@ body{ background-color: grey !important;}
 
 table {
 	border-collapse: collapse;
-	width: 100%;
+	width: 500px;
 	font-size: 10px;
 }
 
@@ -57,6 +57,7 @@ tr:nth-child(even) {background-color: #f2f2f2;}
 
 table, th, td {
   border: 1px solid black;
+  height: 100%;
 }
 th {
 	width:100px;
