--- a/public/css/test.css
+++ b/public/css/test.css
@@ -49,8 +49,8 @@ body{ background-color: grey !important;}
 
 table {
 	border-collapse: collapse;
-	width: 500px;
-	font-size: 10px;
+	/*width: 500px;*/
+	/*font-size: 10px;*/
 }
 
 tr:nth-child(even) {background-color: #f2f2f2;}
