--- a/public/css/test.css
+++ b/public/css/test.css
@@ -42,15 +42,15 @@ th #G{
 	background-color: grey;
 }
 
-@media print{
+/*@media print{
 
 -webkit-print-color-adjust: exact !important;
 body{ background-color: grey !important;}
 
 table {
 	border-collapse: collapse;
-	/*width: 500px;*/
-	/*font-size: 10px;*/
+	width: 500px;
+	font-size: 10px;
 }
 
 tr:nth-child(even) {background-color: #f2f2f2;}
@@ -86,4 +86,4 @@ th #G{
 }
 
 
-}
+}*/
