--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <head>
 <link href='https://fonts.googleapis.com/css?family=Bungee Shade' rel='stylesheet'>
-<link rel="stylesheet" type="text/css" href="test.css" />
+<link rel="stylesheet" type="text/css" href="css/test.css" />
 </head>
 <body>
 <script src="js/timetable.js"></script>
@@ -42,7 +42,6 @@
 <!-- <div><input id="names" placeholder="Name S Slot"><input id="s" placeholder="Class Link"><button onClick="changer(s)">Insert</button></div> -->
 <!-- <div><input id="namet" placeholder="Name T Slot"><input id="t" placeholder="Class Link"><button onClick="changer(t)">Insert</button></div> -->
 </div>
-</center>
 
 
 
@@ -128,7 +127,7 @@
 			</tr>
 			<!-- SAT -->
 		</table>
-		<center><button id="convert-button" style="background-color: #4CAF50; /* Green */
+		<button id="convert-button" style="background-color: #4CAF50; /* Green */
   border: none;
   color: white;
   padding: 20px;
