--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,12 +2,12 @@
 <link href='https://fonts.googleapis.com/css?family=Bungee Shade' rel='stylesheet'>
 <link rel="stylesheet" type="text/css" href="css/test.css" />
 </head>
-<body>
+<body id="element-to-print" style="background-image: url('../img/bg.svg');">
 <script src="js/timetable.js"></script>
 
 <script src="js/html2pdf.bundle.min.js"></script>
 
-<div id="element-to-print">
+<div>
 <center>
 <div class="heading" style="font-family: 'Bungee Shade';font-size: 22px;background-color: #ffbb99;height: 70px;padding: 5px 0 5px 0;text-align: center;">
 	<h2>Online Class Schedule</h2>
