--- a/public/css/test.css
+++ b/public/css/test.css
@@ -1,7 +1,7 @@
 body{ 
-background-color: #ffffff;
+/*background-color: #ffffff;
 background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='160' height='160' viewBox='0 0 200 200'%3E%3Cpolygon fill='%23DCEFFA' points='100 0 0 100 100 100 100 200 200 100 200 0'/%3E%3C/svg%3E");
-font-family:courier,arial,helvetica;
+font-family:courier,arial,helvetica;*/
 }
 
 table {
