--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,8 +18,8 @@
 	1) Enter Course number and link to online lecture<br>
 	2) Alter individual entries if required (example: class cancelled)<br>
 	3) Select 'Convert to Timetable'<br>
-	4) Enable Background Graphics on print page<br><img style="width: 50%" src="img/howtouse.png"><br>
-	5) Save as pdf
+	<!-- 4) Enable Background Graphics on print page<br><img style="width: 50%" src="img/howtouse.png"><br> -->
+	<!-- 5) Save as pdf -->
 </div>
 
 <div class="slotter" id="slotter" style="">
