individual entries instructions

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,12 +14,14 @@
 </div>
 
 <div class="howtouse" style="background-color: #9999ff;">
+	<h4>
 	HOW TO USE:<p>
 	1) Enter Course number and link to online lecture<br>
 	2) Alter individual entries if required (example: class cancelled)<br>
 	3) Select 'Convert to Timetable'<br>
 	<!-- 4) Enable Background Graphics on print page<br><img style="width: 50%" src="img/howtouse.png"><br> -->
 	<!-- 5) Save as pdf -->
+	</h4>
 </div>
 
 <div class="slotter" id="slotter" style="">
@@ -43,7 +45,9 @@
 <!-- <div><input id="namet" placeholder="Name T Slot"><input id="t" placeholder="Class Link"><button onClick="changer(t)">Insert</button></div> -->
 </div>
 
-
+<br>
+<h3> OR, enter individual entries </h3>
+<br>
 
 	<!-- TABLE -->
 	<div class="tablee" style="overflow-x:auto;">
