--- a/views/index.ejs
+++ b/views/index.ejs
@@ -145,6 +145,11 @@
 			Convert to Timetable
 		</button></center>
 	</div>
+	<div style="background-image: url('../img/bg.svg');height: 100%; width: 100%">
+	Made with Onlinett.herokuapp.com
+
+	//sayash
+	</div>
 </div>
 </body>
 </html>
