--- a/public/css/test.css
+++ b/public/css/test.css
@@ -86,3 +86,12 @@ th #G{
 
 
 }
+
+.fixed-footer{
+        width: 100%;
+        position: fixed;        
+        background: #333;
+        padding: 10px 0;
+        color: #fff;
+        bottom: 0;
+    }
