--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,9 +45,11 @@
 <!-- <div><input id="namet" placeholder="Name T Slot"><input id="t" placeholder="Class Link"><button onClick="changer(t)">Insert</button></div> -->
 </div>
 
+<div id="indi-instr">
 <br>
 <h3> OR, enter individual entries </h3>
 <br>
+</div>
 
 	<!-- TABLE -->
 	<div class="tablee" style="overflow-x:auto;">
@@ -145,11 +147,7 @@
 			Convert to Timetable
 		</button></center>
 	</div>
-	<div style="background-image: url('../img/bg.svg');height: 100%; width: 100%">
-	Made with Onlinett.herokuapp.com
 
-	//sayash
-	</div>
 </div>
 </body>
 </html>
