--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,9 @@
 </div>
 
 <div class="howtouse" style="background-color: #9999ff;">
+
+	<h3 style="color: white; background-color: #ffbb99;">Made with <span style="color: #e25555;">&#9829;</span> by CE19B113<p></h3>
+
 	<h4>
 	HOW TO USE:<p>
 	1) Enter Course number and link to online lecture<br>
