--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,9 +19,10 @@
 
 	<h4>
 	HOW TO USE:<p>
-	1) Enter Course number and link to online lecture<br>
+	<h4 style="color: white">1) Enter Course number and link to online lecture<br></h4>
 	2) Alter individual entries if required (example: class cancelled)<br>
-	3) Select 'Convert to Timetable'<br>
+	<h4 style="color: white">3) Press 'Insert' button to insert in timetable<br></h4>
+	4) Select 'Convert to Timetable'<br>
 	<!-- 4) Enable Background Graphics on print page<br><img style="width: 50%" src="img/howtouse.png"><br> -->
 	<!-- 5) Save as pdf -->
 	</h4>
